# euler-batch-decoder

./: .gitignore  .pylintrc  Makefile  README.md  example_batch.json  generate_function_signatures.py  main.py  pylintrc  pyproject.toml  test_decoder.py  test_readme_case.py  update_decoder.py  updated_signatures.txt
.github/workflows/: ci.yml  dependency-update.yml  pr-validation.yml  release.yml
evc_batch_decoder/: __init__.py  __main__.py  cli.py  decoder.py
tests/: test_100_percent_coverage.py  test_absolute_100.py  test_cli.py  test_cli_edge_cases.py  test_coverage_improvements.py  test_decoder.py  test_decoder_comprehensive.py  test_decoder_edge_cases.py  test_exact_coverage.py  test_final_100_exact.py  test_final_100_simple.py  test_final_4_lines.py  test_final_8_lines.py  test_final_coverage.py  test_final_push_100.py  test_main.py  test_readme_case.py  test_remaining_lines.py  test_true_100_coverage.py  test_ultimate_100.py
